--- a/index.html
+++ b/index.html
@@ -1,38 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Work Day Scheduler</title>
+</head>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <main class="container">
+    <!-- Timeblocks go here -->
+
+    <dayPlan class="row time-clock">
+      <eightAM id="eightAM" class="hour">8am</eightAM>
+      <textarea>8am Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+    <dayPlan class="row time-clock">
+      <nineAM id="nineAM" class="hour">9am</nineAM>
+      <textarea>9am Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+    <dayPlan class="row time-clock">
+      <tenAM id="tenAM" class="hour">10am</tenAM>
+      <textarea>10am Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+    <dayPlan class="row time-clock">
+      <elevenAM id="elevenAM" class="hour">11am</elevenAM>
+      <textarea>11am Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+    <dayPlan class="row time-clock">
+      <twelvePM id="twelvePM" class="hour">12pm</twelvePM>
+      <textarea>12pm Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+    <dayPlan class="row time-clock">
+      <onePM id="onePM" class="hour">1pm</onePM>>
+      <textarea>1pm Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+    <dayPlan class="row time-clock">
+      <twoPM id="twoPM" class="hour">2pm</twoPM>>
+      <textarea>2pm Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+    <dayPlan class="row time-clock">
+      <threePM id="threePM" class="hour">3pm</threePM>>
+      <textarea>3pm Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+    <dayPlan class="row time-clock">
+      <fourPM id="fourPM" class="hour">4pm</fourPM>
+      <textarea>4pm Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+    <dayPlan class="row time-clock">
+      <fivePM id="fivePM" class="hour">5pm</fivePM>>
+      <textarea>5pm Event</textarea>
+      <button class="saveBtn">Save</button>
+    </dayPlan>
+
+  </main>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
