able to recreate the hours and the save button using JS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <main class="container">
     <!-- Timeblocks go here -->
 
-    <dayPlan class="row time-clock">
+    <!-- I will be inserting the timeblocks using JS with the use of functions and loops
+      <dayPlan class="row time-clock">
       <eightAM id="eightAM" class="hour">8am</eightAM>
       <textarea>8am Event</textarea>
       <button class="saveBtn">Save</button>
@@ -80,7 +81,7 @@
       <fivePM id="fivePM" class="hour">5pm</fivePM>>
       <textarea>5pm Event</textarea>
       <button class="saveBtn">Save</button>
-    </dayPlan>
+    </dayPlan> -->
 
   </main>
 
